# openindiana-backgrounds

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  openindiana-backgrounds.xml.in.in
po/: POTFILES.in  POTFILES.skip
